--- a/nextjs/sitecore/config/sitecore-jss-app.config
+++ b/nextjs/sitecore/config/sitecore-jss-app.config
@@ -65,7 +65,7 @@
       <site patch:before="site[@name='website']"
             inherits="website"
             name="sitecore-jss-app"
-            hostName="sc10devsc.dev.local"
+            hostName="https://0547-223-233-80-122.ngrok-free.app/"
             rootPath="/sitecore/content/sitecore-jss-app"
             startItem="/home"
             database="master" />
