--- a/nextjs/.env
+++ b/nextjs/.env
@@ -29,7 +29,7 @@ SITECORE_API_KEY= {EF15121D-4F76-4B30-81F6-7B4963954B48}
 # not exist when building locally (if you've never run `jss setup`), or when building
 # in a higher environment (since `scjssconfig.json` is ignored from source control).
 # In this case, use this environment variable to provide the value at build time.
-SITECORE_API_HOST=
+SITECORE_API_HOST= https://0547-223-233-80-122.ngrok-free.app/
 
 # Your GraphQL Edge endpoint. This is required for Sitecore Experience Edge.
 # For Sitecore XM, this is typically optional. By default, the endpoint is calculated using
